--- a/WarehouseAPI/src/main/resources/application.properties
+++ b/WarehouseAPI/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=warehouse
+spring.datasource.url=jdbc:sqlserver://localhost:1500;databaseName=warehouse
 spring.datasource.username=sa
 spring.datasource.password=hien_vip12
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2005Dialect
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+server.port=8080
 
