--- a/WarehouseAPI/src/main/resources/application.properties
+++ b/WarehouseAPI/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://localhost:1500;databaseName=warehouse
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=warehouse
 spring.datasource.username=sa
-spring.datasource.password=hien_vip12
+spring.datasource.password=1
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
