--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 WarehouseAPI/src/main/resources/application.properties
 WarehouseAPI/nbactions.xml
 WarehouseAPI/src/main/resources/application.properties
+WarehouseAPI/src/main/resources/application.properties
+WarehouseAPI/src/main/resources/application.properties
