--- a/WarehouseAPI/pom.xml
+++ b/WarehouseAPI/pom.xml
@@ -84,6 +84,7 @@
             <version>5.2.0</version>
             <type>jar</type>
         </dependency>
+        <dependency>
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session-core</artifactId>
         </dependency>
