--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ WarehouseAPI/src/main/resources/application.properties
 WarehouseAPI/nbactions.xml
 WarehouseAPI/src/main/resources/application.properties
 WarehouseAPI/src/main/resources/application.properties
+WarehouseAPI/src/main/resources/application.properties
