--- a/WarehouseAPI/src/main/resources/application.properties
+++ b/WarehouseAPI/src/main/resources/application.properties
@@ -1,16 +1,16 @@
-#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=warehouse
-#spring.datasource.username=sa
-#spring.datasource.password=1
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:sqlserver://localhost:1500;databaseName=warehouse
+spring.datasource.username=sa
+spring.datasource.password=hien_vip12
 
-spring.datasource.url = jdbc:mysql://localhost:3306/warehouse?useUnicode=yes&characterEncoding=utf8
-spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.url = jdbc:mysql://localhost:3306/warehouse?useUnicode=yes&characterEncoding=utf8
+#spring.datasource.username=root
+#spring.datasource.password=
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2005Dialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2005Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
