--- a/WarehouseMobile/app/src/main/AndroidManifest.xml
+++ b/WarehouseMobile/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".AllocateDetailActivity"
+            android:exported="false" />
+        <activity
             android:name=".AllocateActivity"
             android:exported="false" />
         <activity
