--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ WarehouseAPI/nbactions.xml
 WarehouseAPI/src/main/resources/application.properties
 WarehouseAPI/src/main/resources/application.properties
 WarehouseAPI/src/main/resources/application.properties
+WarehouseAPI/src/main/resources/application.properties
+*.properties
