--- a/WarehouseAPI/src/main/resources/application.properties
+++ b/WarehouseAPI/src/main/resources/application.properties
@@ -16,3 +16,9 @@ spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
 spring.session.timeout.seconds=900
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=sluuthanh.demo.send@gmail.com
+spring.mail.password=nppwzhwzwlapivlk
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
