--- a/BackupMobile/app/build.gradle
+++ b/BackupMobile/app/build.gradle
@@ -47,4 +47,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-database'
     implementation 'com.google.firebase:firebase-firestore'
+    implementation 'com.github.yuriy-budiyev:code-scanner:2.3.2'
+
 }
