PRJ4 | Excel for Customer | Thien
Export: working
Import: fixing

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ WarehouseAPI/nbactions.xml
 WarehouseAPI/src/main/resources/application.properties
 WarehouseAPI/src/main/resources/application.properties
 WarehouseAPI/src/main/resources/application.properties
+WarehouseAPI/src/main/resources/application.properties
