update android good detail

--- a/WarehouseAPI/pom.xml
+++ b/WarehouseAPI/pom.xml
@@ -109,6 +109,11 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-admin</artifactId>
+            <version>6.9.0</version>
+        </dependency>
     </dependencies>
 
     <build>
