--- a/WarehouseAPI/src/main/resources/application.properties
+++ b/WarehouseAPI/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.url=jdbc:sqlserver://localhost:1500;databaseName=warehouse
 spring.datasource.username=sa
 spring.datasource.password=hien_vip12
 
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2005Dialect
@@ -18,6 +19,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 server.port=8080
+app.firebase-configuration-file=firebase-service-account.json
 
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
