update check role android

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ WarehouseAPI/src/main/resources/application.properties
 WarehouseAPI/src/main/resources/application.properties
 WarehouseAPI/src/main/resources/application.properties
 *.properties
+WarehouseAPI/src/main/resources/application.properties
